# VideoUtils

./: CMakeLists.txt  VideoUtils_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oplus_mainwindow.cpp  qrc_interface_icon.cpp  readme.md  readme.txt
Components/: displaycomponents.cpp  displaycomponents.h  sinprogressbar.cpp  sinprogressbar.h  sinslider.cpp  sinslider.h
Decode/: CMakeLists.txt  videodecode.cpp  videodecode.h
Encode/: CMakeLists.txt  videoencode.cpp  videoencode.h
Interface/: videocallback.h
OpenGL/: displaycomponents.cpp  displaycomponents.h
ThirdLib/ffmpeg/include/libavutil/: ffversion.h  rational.h
ThirdLib/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
UI_Components/: infoplane.cpp  infoplane.h  infoplane.ui  localfile_page.cpp  localfile_page.h  localfile_page.ui
Utils/: CMakeLists.txt  log.h  utils.cpp  utils.h
Utils/Mutex/: cond.cpp  cond.h  mutex.cpp  mutex.h
Video/: CMakeLists.txt
Video/Decode/: CMakeLists.txt  videodecode.h
Video/Encode/: CMakeLists.txt  videoencode.cpp
VideoController/: CMakeLists.txt  audiocontroller_thread.cpp  cmake_install.cmake  videocontroller.cpp  videocontroller.h  videocontroller_thread.cpp  videoframe.cpp  videoframe.h
resource/: interface_icon.qrc  interface_icon.qrc.depends
